test(IssueControllerTest): add issue detail get api test case